[package]
name = "telcoin-explorer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "telcoin-explorer"
path = "src/main.rs"

[dependencies]
dioxus = { version = "0.7", features = ["web", "router"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window",
    "Navigator",
    "Clipboard",
    "Location",
    "HtmlInputElement",
    "WebSocket",
    "MessageEvent",
    "BinaryType",
    "CloseEvent", "console"] }
gloo-net = { version = "0.6", features = ["http", "websocket"] }
gloo-timers = { version = "0.3", features = ["futures"] }
futures = "0.3"
log = "0.4"
wasm-logger = "0.2"
js-sys = "0.3"

[profile.release]
opt-level = "s"
lto = true
